Fixed hero layout issue

--- a/src/input.css
+++ b/src/input.css
@@ -7,3 +7,9 @@
     @apply font-Inter;
   }
 }
+
+@layer utilities {
+  .con {
+    @apply mx-auto sm:max-w-2xl lg:max-w-4xl xl:max-w-7xl;
+  }
+}
